@@ -1,5 +1,10 @@
 2014-01-02  Marc Glisse  <marc.glisse@inria.fr>
 
+	PR c++/59641
+	* g++.dg/cpp0x/pr59641.C: New file.
+
+2014-01-02  Marc Glisse  <marc.glisse@inria.fr>
+
 	* g++.dg/cpp0x/initlist-explicit-sfinae.C: New file.
 
 2014-01-02  Marc Glisse  <marc.glisse@inria.fr>
