@@ -1,5 +1,11 @@
 2014-01-02  Marc Glisse  <marc.glisse@inria.fr>
 
+	PR c++/59641
+	* call.c (build_conditional_expr_1): Check the return value of
+	force_rvalue.
+
+2014-01-02  Marc Glisse  <marc.glisse@inria.fr>
+
 	* call.c (convert_like_real): Check complain.
 
 2014-01-02  Marc Glisse  <marc.glisse@inria.fr>
